Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     <!-- SCREEN 2: ANNIVERSARY FINALE -->
     <div id="anniversary-screen">
         <div class="scene">
-            <div class="message" id="anniMessage">Happy Second Anniversary</div>
+            <div class="message" id="anniMessage">Happy Second Anniversary!</div>
             <div class="drone-wrapper" id="anniDroneWrapper">
                 <div class="drone-icon">🚁</div>
                 <div class="laser"></div>
@@ -409,7 +409,7 @@
             'images/6.jfif', 'images/7.jfif', 'images/8.jfif', 'images/9.jfif', 'images/10.jfif',
             'images/11.jfif', 'images/12.jfif', 'images/13.jfif', 'images/14.jfif', 'images/15.jfif',
             'images/16.jfif', 'images/17.jfif', 'images/18.jfif', 'images/19.jfif', 'images/20.jfif',
-            'images/21.jfif', 'images/22.jfif', 'images/23.jfif', 'images/24.jfif', 'images/25.jfif'
+            'images/21.jfif', 'images/22.jfif', 'images/23.jfif', 'images/24.jfif', 'images/25.jfif', 'images/26.jfif', 'images/27.jfif', 'images/28.jfif', 'images/29.jfif', 'images/30.jfif','images/31.jfif', 'images/32.jfif'  
         ];
 
         function startAnniversarySequence() {
